Remove deprecated event.keyCode

--- a/Oefening4/index.html
+++ b/Oefening4/index.html
@@ -1,11 +1,23 @@
+<!--
+To change this template, choose Tools | Templates
+and open the template in the editor.
+-->
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Array Cardio 💪</title>
-  </head>
-  <body>
-    <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
-    <script src="js/arraycardio.js"></script>
-  </body>
+<html>
+
+   <head>
+      <title></title>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+      <link rel="stylesheet" href="css/oefening3.css">
+   </head>
+
+   <body>
+      <div class="main">
+         <h3>Probeer met zo weinig mogelijk kliks op de pijltjestoetsen de paarse bol te bereiken</h3>
+         <canvas id="tekenCanvas" width="240" height="300"></canvas>
+         <p id="score"></p>
+      </div>
+      <script src="js/doolhof.js"></script>
+   </body>
+
 </html>
