--- a/Oefening1/index.html
+++ b/Oefening1/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<head>
-    <title>Collections in JavaScript</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Array Cardio 💪</title>
+  </head>
 
-<body>
-    <h1>Webapplicaties II - H05 - Collections in JavaScript</h1>
-    <script src="js/oefening1.js"></script>
-</body>
+  <body>
+    <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+    <script src="js/arraycardio.js"></script>
+  </body>
 
 </html>
