--- a/Oefening2/index.html
+++ b/Oefening2/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
+
     <head>
-        <title></title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="css/oefening2.css">
+        <title>Collections in JavaScript</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
+
     <body>
-        <div class="main">
-            <h3>Eet de rode doelen op</h3>
-            <h4>Aantal opgegeten doelen: <label id="opgegetenDoelen">0</label></h4>
-            <canvas id="gameCanvas" width="400" height="400"></canvas>         
-        </div>       
-        <script src="js/oefening2.js"></script>
+        <h1>Webapplicaties II - H05 - Collections in JavaScript</h1>
+        <script src="js/collections.js"></script>
     </body>
+
 </html>
