--- a/Oefening2/index.html
+++ b/Oefening2/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <h1>Webapplicaties II - H05 - Collections in JavaScript</h1>
+        <h1>Web Development II - H04 - Functioneel programmeren met arrays</h1>
         <script src="js/collections.js"></script>
     </body>
 
